[gd_scene load_steps=4 format=3 uid="uid://cqo3tqn7bvrmo"]

[ext_resource type="Script" path="res://Scripts/level_holder.gd" id="1_67yaw"]
[ext_resource type="Texture2D" uid="uid://hxtbkbv8tojs" path="res://Assets/Sprites/MenuItems/manila_folder_placeholder.png" id="2_l5uel"]
[ext_resource type="Texture2D" uid="uid://b331bs5cipsqf" path="res://Assets/Sprites/MenuItems/RaidButton.png" id="3_rw6gs"]

[node name="LevelHolder" type="Node2D"]
script = ExtResource("1_67yaw")

[node name="Folder" type="Sprite2D" parent="."]
position = Vector2(52, -14)
texture = ExtResource("2_l5uel")

[node name="HighScore" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -87.0
offset_top = 9.0
offset_right = 140.0
offset_bottom = 57.0
text = "High Score: "

[node name="LevelName" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -22.0
offset_top = -183.0
offset_right = 205.0
offset_bottom = -135.0
text = "LevelName"

[node name="AuthorTime" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 128.0
offset_top = -70.0
offset_right = 355.0
offset_bottom = -22.0
text = "Author Time: "

[node name="GoldTime" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 131.0
offset_top = -39.0
offset_right = 358.0
offset_bottom = 9.0
text = "Gold Time: "

[node name="SilverTime" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 131.0
offset_top = -5.0
offset_right = 358.0
offset_bottom = 43.0
text = "Silver Time: "

[node name="BronzeTime" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 131.0
offset_top = 24.0
offset_right = 358.0
offset_bottom = 72.0
text = "Bronze Time: "

[node name="Raid" type="TextureButton" parent="."]
offset_left = -62.0
offset_top = 128.0
offset_right = 194.0
offset_bottom = 256.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_rw6gs")

[node name="Photo" type="Sprite2D" parent="."]
position = Vector2(-210, -111)

[connection signal="pressed" from="Raid" to="." method="_on_raid_pressed"]
